[package]
name = "theseed_archive_test"
version = "0.1.0"
edition = "2024"

[dependencies]
# 웹 자동화 도구
thirtyfour = "0.36.1"
# 비동기 런타임
tokio = { version = "1.49.0", features = ["full"] }
# 에러 핸들링 (하이픈 '-' 확인!)
color-eyre = "0.6"
# HTTP 클라이언트 (2026년 최신 표준 설정)
reqwest = { version = "0.13.2", features = ["json"]}
chrono = "0.4.44"